memory leak on poppler_document_new_from_fd
One of the branches uses GooFile::open, that returns a GooFile that needs to be deleted later at some point, but the only thing we do with it is give it to FileStream which does not take ownership of it.
One of the branches uses GooFile::open, that returns a GooFile that needs to be deleted later at some point, but the only thing we do with it is give it to FileStream which does not take ownership of it.