glib: Fix mem leak in poppler_document_new_from_fd

Someone needs to own the GooFile that's referenced by FileStream. Add a
simple OwningFileStream class that does that.

Fixes: https://gitlab.freedesktop.org/poppler/poppler/-/issues/1227